--- a/templates/users/customerdashboard.html
+++ b/templates/users/customerdashboard.html
@@ -41,7 +41,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                    <!-- Load the sidebar here -->
-                   {% include 'includes/c_sidebar.html' %}
+                   {% include 'includes/cl_sidebar.html' %}
                 </div>
                 <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                     <div class="user-dashboard loader-holder">
@@ -102,7 +102,7 @@
                                                     <div>£ 28.24</div>
                                                     <div>£ 2.82</div>
                                                     <div>£ 25.42</div>
-                                                    <div><span class="order-status" style="background-color: #047a06;">Completed</span></div>
+                                                    <div><span class="order-status" style="background-color: #1e73be;">Completed</span></div>
                                                 </li>
                                             </ul>
                                         </div>												
