--- a/templates/bazaar/checkout.html
+++ b/templates/bazaar/checkout.html
@@ -87,24 +87,15 @@
                                             <li style="list-style-type: none;">
                                                 Subtotal
                                                 <span class="price float-right">
-                                                    <span class="currency">€</span>
+                                                    <span class="currency"></span>
                                                 <span id="subtotal">{{ subtotal }}</span>
                                                 </span>
                                             </li>
-                                            {% for key, value in tax_dict.items %} {% for i, j in value.items %}
-                                            <li style="list-style-type: none;">
-                                                {{ key }} <small>({{ i }}%)</small>
-                                                <span class="price float-right">
-                                                            <span class="currency">€</span>
-                                                <span id="tax-{{ key }}">{{ j }}</span>
-                                                </span>
-                                            </li>
-                                            {% endfor %} {% endfor %}
 
                                             <li style="list-style-type: none; font-weight:600">
                                                 TOTAL
                                                 <span class="price float-right">
-                                                    <span class="currency">€</span>
+                                                    <span class="currency"></span>
                                                 <span id="total">{{ grand_total }}</span>
                                                 </span>
                                             </li>
@@ -113,7 +104,7 @@
                                             <div class="payment-method">
                                                 <label>
                                                     <input type="radio" name="payment_method" value="PayPal">
-                                                    <img src="{% static 'images/PayPal.png' %}" alt="PayPal" width="100">
+                                                    <img src="{% static 'images/stripe.png' %}" alt="PayPal" width="100">
                                                 </label>
                                             </div>
                                             <span class="text-danger" id="payment-method-error"></span>
