--- a/templates/customers/my_orders.html
+++ b/templates/customers/my_orders.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %} {% load static %} {% block content %} {% include 'includes/alerts.html' %}
 
 <div class="main-section">
-    {% include 'includes/cover.html' %}
+    {% include 'customers/cover.html' %}
     <div class="page-section account-header buyer-logged-in">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                     <!-- Load the sidebar here -->
-                    {% include 'includes/cl_sidebar.html' %}
+                    {% include 'includes/c_sidebar.html' %}
                 </div>
                 <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                     <div class="user-dashboard loader-holder">
@@ -31,12 +31,12 @@
                                                 <tbody>
                                                     {% for order in orders %}
                                                     <tr>
-                                                        <td><b><a href="{% url 'coffee_order_detail' order.order_number %}" class="text-dark">{{ order.order_number }}</a></b></td>
+                                                        <td><b><a href="{% url 'order_detail' order.order_number %}" class="text-dark">{{ order.order_number }}</a></b></td>
                                                         <td>{{ order.name }}</td>
-                                                        <td>€{{ order.get_total_by_coffee.grand_total }}</td>
+                                                        <td>€{{ order.total }}</td>
                                                         <td>{{ order.status }}</td>
                                                         <td>{{ order.created_at }}</td>
-                                                        <td><a href="{% url 'coffee_order_detail' order.order_number %}" class="btn btn-danger">Details</a></td>
+                                                        <td><a href="{% url 'order_detail' order.order_number %}" class="btn btn-danger">Details</a></td>
                                                     </tr>
                                                     {% endfor %}
                                                 </tbody>
