--- a/templates/home.html
+++ b/templates/home.html
@@ -105,64 +105,12 @@
 						</div>
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
 							<div class="main-search fancy bg-holder">
+              
 								<form>
 									<div class="row">
 										<div class="col-lg-6 col-md-6 col-sm-5 col-xs-12">
 											<div class="field-holder">
-												<input type="text" placeholder="cafe name">
-											</div>
-										</div>
-										<div class="col-lg-4 col-md-4 col-sm-5 col-xs-12">
-											<div class="field-holder">
-												<ul>
-													<li class="select-location">
-														<div class="coffeebakery-locations-fields-group coffeebakery-focus-out">
-															<span class="coffeebakery-search-location-icon"><i class="icon-location"></i></span>
-															<span id="coffeeb_radius_location_open333" class="coffeeb-radius-location"><i class="icon-target5"></i></span>
-															<input type="text" class="location-field-text filter" placeholder="area">
-														</div>
-														<div class="select-location" id="coffeebakery-radius-range333" style="display: none;">
-															<div class="select-popup popup-open">
-																<a id="location_close_popup333" href="javascript:0;" class="location-close-popup">
-																	<i class="icon-times"></i></a>
-																<input type="hidden" class="coffeebakery-radius" name="coffeebakery_radius" value="10">
-																<p>Show with in</p>
-																<input id="ex16b333" type="text" data-value="10" value="10" style="display: none;">
-																<script>
-																	jQuery(document).ready(function () {
-																		var elem = jQuery("#ex16b333");
-																		if (elem.length != "") {
-																			elem.slider({
-																				step: 1,
-																				min: 0,
-																				max: 500,
-																				value: 10,
-																			});
-																			elem.on("slideStop", function () {
-																				var rang_slider_val = elem.val();
-																				jQuery("#ex16b333CurrentSliderValLabel").html(rang_slider_val);
-																				jQuery("#range-hidden-coffeebakery-radius333").val(rang_slider_val);
-																				//coffeebakery_coffee_content("333");
-																			});
-																			elem.on("slide", function () {
-																				jQuery("#ex16b333CurrentSliderValLabel").html(elem.val());
-																			});
-																		}
-
-																		$("#coffeeb_radius_location_open333").click(function () {
-																			$("#coffeebakery-radius-range333").show();
-																		});
-																		$("#location_close_popup333").click(function () {
-																			$("#coffeebakery-radius-range333").hide();
-																		});
-																	});
-																</script>
-																<span>Miles: <span id="ex16b333CurrentSliderValLabel">10</span></span><br>
-																<p class="my-location">of <i class="cs-color icon-location-arrow"></i><a id="coffeebakery-geo-location-all" class="cs-color coffeebakery-geo-location313324" href="javascript:void(0)">My location</a></p>
-															</div>
-														</div>
-													</li>
-												</ul>
+												<input name="coffee_name" type="text" placeholder="cafe name">
 											</div>
 										</div>
 										<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
@@ -172,6 +120,8 @@
 										</div>
 									</div>
 								</form>
+
+
 							</div>
 						</div>
 						
