--- a/templates/bazaar/checkout.html
+++ b/templates/bazaar/checkout.html
@@ -103,8 +103,8 @@
                                             <!-- Payment method -->
                                             <div class="payment-method">
                                                 <label>
-                                                    <input type="radio" name="payment_method" value="PayPal">
-                                                    <img src="{% static 'images/stripe.png' %}" alt="PayPal" width="100">
+                                                    <input type="radio" name="payment_method" value="Stripe">
+                                                    <img src="{% static 'images/stripe.png' %}" alt="Stripe" width="100">
                                                 </label>
                                             </div>
                                             <span class="text-danger" id="payment-method-error"></span>
