--- a/templates/orders/order_complete.html
+++ b/templates/orders/order_complete.html
@@ -44,7 +44,7 @@
 
                             </td>
                             <td>{{ item.quantity }} QTY</td>
-                            <td>€{{ item.coffeeitem.price }}</td>
+                            <td>{{ item.coffeeitem.price }}</td>
                         </tr>
                         {% endfor %}
                     </tbody>
@@ -58,24 +58,15 @@
                             <li style="list-style-type: none;">
                                 Subtotal
                                 <span class="price float-right">
-                                    <span class="currency">€</span>
+                                    <span class="currency"></span>
                                 <span id="subtotal">{{ subtotal }}</span>
                                 </span>
                             </li>
-                            {% for key, value in tax_data.items %} {% for i, j in value.items %}
-                            <li style="list-style-type: none;">
-                                {{ key }} <small>({{ i }}%)</small>
-                                <span class="price float-right">
-                                            <span class="currency">€</span>
-                                <span id="tax-{{ key }}">{{ j }}</span>
-                                </span>
-                            </li>
-                            {% endfor %} {% endfor %}
 
                             <li style="list-style-type: none; font-weight:600">
                                 TOTAL
                                 <span class="price float-right">
-                                    <span class="currency">€</span>
+                                    <span class="currency"></span>
                                 <span id="total">{{ order.total }}</span>
                                 </span>
                             </li>
