--- a/templates/users/coffeedashboard.html
+++ b/templates/users/coffeedashboard.html
@@ -35,7 +35,7 @@
                                             Total Revenue
                                         </div>
                                         <div class="card-body text-center">
-                                            <a href="#"><h5 class="card-title">€3456.0</h5></a>                                           
+                                            <a href="#"><h5 class="card-title">3456.0</h5></a>                                           
                                         </div>
                                     </div> 
                                 </div>
@@ -45,7 +45,7 @@
                                             This Month
                                         </div>
                                         <div class="card-body text-center">
-                                            <a href="#"><h5 class="card-title">€145.0</h5></a>
+                                            <a href="#"><h5 class="card-title">145.0</h5></a>
                                         </div>
                                     </div> 
                                 </div>
