--- a/templates/coffee/my_orders.html
+++ b/templates/coffee/my_orders.html
@@ -33,7 +33,7 @@
                                                     <tr>
                                                         <td><b><a href="{% url 'coffee_order_detail' order.order_number %}" class="text-dark">{{ order.order_number }}</a></b></td>
                                                         <td>{{ order.name }}</td>
-                                                        <td>€{{ order.get_total_by_coffee.grand_total }}</td>
+                                                        <td>{{ order.get_total_by_coffee.grand_total }}</td>
                                                         <td>{{ order.status }}</td>
                                                         <td>{{ order.created_at }}</td>
                                                         <td><a href="{% url 'coffee_order_detail' order.order_number %}" class="btn btn-danger">Details</a></td>
