--- a/templates/coffee/order_detail.html
+++ b/templates/coffee/order_detail.html
@@ -57,7 +57,7 @@
 
                                                         </td>
                                                         <td>{{ item.quantity }} QTY</td>
-                                                        <td>€{{ item.coffeeitem.price }}</td>
+                                                        <td>{{ item.coffeeitem.price }}</td>
                                                     </tr>
                                                     {% endfor %}
                                                 </tbody>
@@ -71,7 +71,7 @@
                                                         <li style="list-style-type: none;">
                                                             Subtotal
                                                             <span class="price float-right">
-                                                                <span class="currency">€</span>
+                                                                <span class="currency"></span>
                                                             <span id="subtotal">{{ subtotal }}</span>
                                                             </span>
                                                         </li>
@@ -79,7 +79,7 @@
                                                         <li style="list-style-type: none; font-weight:600">
                                                             TOTAL
                                                             <span class="price float-right">
-                                                                <span class="currency">€</span>
+                                                                <span class="currency"></span>
                                                             <span id="total">{{ grand_total }}</span>
                                                             </span>
                                                         </li>
