--- a/templates/customers/order_detail.html
+++ b/templates/customers/order_detail.html
@@ -57,7 +57,7 @@
 
                                                         </td>
                                                         <td>{{ item.quantity }} QTY</td>
-                                                        <td>€{{ item.coffeeitem.price }}</td>
+                                                        <td>{{ item.coffeeitem.price }}</td>
                                                     </tr>
                                                     {% endfor %}
                                                 </tbody>
@@ -71,7 +71,7 @@
                                                         <li style="list-style-type: none;">
                                                             Subtotal
                                                             <span class="price float-right">
-                                                                <span class="currency">€</span>
+                                                                <span class="currency"></span>
                                                             <span id="subtotal">{{ subtotal }}</span>
                                                             </span>
                                                         </li>
@@ -79,7 +79,7 @@
                                                         <li style="list-style-type: none; font-weight:600">
                                                             TOTAL
                                                             <span class="price float-right">
-                                                                <span class="currency">€</span>
+                                                                <span class="currency"></span>
                                                             <span id="total">{{ order.total }}</span>
                                                             </span>
                                                         </li>
@@ -94,7 +94,7 @@
                                                 </div>
                                                 <div class="d-flex justify-content-end align-items-end">
                                                     <span class="d-block font-weight-bold">Need help? </span>
-                                                    <span> Call - +353 560604268</span>
+                                                    <span> Call 123</span>
                                                 </div>
                                             </div>
                                         </div>
