--- a/templates/orders/new_order_received.html
+++ b/templates/orders/new_order_received.html
@@ -79,7 +79,7 @@
                         <small><a href="http://{{domain}}{% url 'coffee_detail' coffee.coffeeitem.coffee.coffee_slug %}" style="color:#ccc;">{{ coffee.coffeeitem.coffee.coffee_name }}</a></small>
                     </td>
                     <td>{{ coffee.quantity }}</td>
-                    <td>€{{ coffee.price }}</td>
+                    <td>{{ coffee.price }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -88,13 +88,13 @@
         <!-- Order amounts -->
         <table bgcolor="#e8eaee" width="100%" role="presentation" border="0" cellpadding="0" cellspacing="10px" style="padding: 30px 30px 40px 40px;">
             <tbody>
-                <tr>Subtotal: €{{ coffee_subtotal }}</tr>
+                <tr>Subtotal: {{ coffee_subtotal }}</tr>
                 {% for key, val in tax_data.items %} {% for i, j in val.items %}
                 <tr>
-                    <td>{{ key }} <small>({{ i }}%)</small> : <span>€{{ j }}</span></td>
+                    <td>{{ key }} <small>({{ i }}%)</small> : <span>{{ j }}</span></td>
                 </tr>
                 {% endfor %} {% endfor %}
-                <tr>Grand total: €{{ coffee_grand_total }}</tr>
+                <tr>Grand total: {{ coffee_grand_total }}</tr>
             </tbody>
         </table>
 
