--- a/templates/users/customerdashboard.html
+++ b/templates/users/customerdashboard.html
@@ -27,7 +27,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                    <div class="card">
+                                    <div cllass="card">
                                         <div class="card-header">
                                             Logged in as: <b>{{ user.email }}</b>
                                         </div>
